hphp/hack/test/typecheck/shape_remove_key5.php.exp
File "shape_remove_key5.php", line 13, characters 25-26:
Was expecting a constant string or class constant (for shape access) (Typing[4051])
